--- a/package.json
+++ b/package.json
@@ -619,8 +619,8 @@
     "@typescript-eslint/parser": "^8.17.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
+    "@vscode/vsce": "^3.3.1",
     "eslint": "^9.16.0",
-    "typescript": "^5.7.2",
-    "vsce": "^2.15.0"
+    "typescript": "^5.7.2"
   }
 }
