--- a/package.json
+++ b/package.json
@@ -620,7 +620,9 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.5.0",
+    "brace-expansion": "^4.0.1",
     "eslint": "^9.29.0",
+    "tar-fs": "^3.0.10",
     "typescript": "^5.8.3"
   }
 }
